fix: watermill datarace
define consumer groups which will allow diff handlers track its own
latest ack event
